deploy: FreieBildung/Organisationsentwicklung@36e28d874a48cb954c4a6c502f70e5fce2edc714

--- a/leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html
+++ b/leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Einleitung - Servicenetzwerk Freie Bildung</title>
+        <title>Elternbeitragsverarbeitung - Servicenetzwerk Freie Bildung</title>
 
 
         <!-- Custom HTML head -->
@@ -14,20 +14,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="shortcut icon" href="../../../favicon.png">
+        <link rel="stylesheet" href="../../../css/variables.css">
+        <link rel="stylesheet" href="../../../css/general.css">
+        <link rel="stylesheet" href="../../../css/chrome.css">
+        <link rel="stylesheet" href="../../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../../highlight.css">
+        <link rel="stylesheet" href="../../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -36,7 +36,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><a href="00-einleitung.html" class="active">Einleitung</a></li><li class="chapter-item "><a href="01-prozess-schnittstelle.html"><strong aria-hidden="true">1.</strong> Prozess-Schnittstelle</a></li><li class="chapter-item "><a href="02-leistungsprozesse.html"><strong aria-hidden="true">2.</strong> Leistungsprozesse</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung.html"><strong aria-hidden="true">2.1.</strong> Finanzverwaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">2.1.1.</strong> Debitorenbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">2.1.1.1.</strong> Elternbeitragsverarbeitung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">2.1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">2.1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">2.1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">2.1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">2.1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">2.1.2.</strong> Kreditorenbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">2.1.2.1.</strong> Belegeingang</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">2.1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">2.1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">2.1.3.</strong> Lohnbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">2.1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">2.1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item "><a href="leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">2.1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li></ol></li><li class="chapter-item "><a href="03-genossenschaftsprozesse.html"><strong aria-hidden="true">3.</strong> Genossenschaftsprozesse</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="genossenschaftsprozesse/it.html"><strong aria-hidden="true">3.1.</strong> Information und Kommunikation</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="genossenschaftsprozesse/it/informationsmanagement.html"><strong aria-hidden="true">3.1.1.</strong> Informationsmanagement</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="genossenschaftsprozesse/it/informationsmanagement/publikation.html"><strong aria-hidden="true">3.1.1.1.</strong> Publikation</a></li></ol></li><li class="chapter-item "><a href="genossenschaftsprozesse/it/prozessunterstuetzung.html"><strong aria-hidden="true">3.1.2.</strong> Prozessunterstützung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="genossenschaftsprozesse/it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">3.1.2.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li></ol></li></ol></li><li class="chapter-item "><a href="04-weiterentwicklung.html"><strong aria-hidden="true">4.</strong> Weiterentwicklung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="weiterentwicklung/weitere-schulprozesse.html"><strong aria-hidden="true">4.1.</strong> Weitere Schulprozesse</a></li></ol></li><li class="chapter-item "><div>Beitragende</div></li><li class="chapter-item affix "><a href="98-datenschutz.html">Datenschutz</a></li><li class="chapter-item affix "><a href="99-lizenz.html">Lizenz</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><a href="../../../00-einleitung.html">Einleitung</a></li><li class="chapter-item "><a href="../../../01-prozess-schnittstelle.html"><strong aria-hidden="true">1.</strong> Prozess-Schnittstelle</a></li><li class="chapter-item expanded "><a href="../../../02-leistungsprozesse.html"><strong aria-hidden="true">2.</strong> Leistungsprozesse</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../leistungsprozesse/finanzverwaltung.html"><strong aria-hidden="true">2.1.</strong> Finanzverwaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">2.1.1.</strong> Debitorenbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html" class="active"><strong aria-hidden="true">2.1.1.1.</strong> Elternbeitragsverarbeitung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">2.1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">2.1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">2.1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">2.1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">2.1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">2.1.2.</strong> Kreditorenbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">2.1.2.1.</strong> Belegeingang</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">2.1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">2.1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">2.1.3.</strong> Lohnbuchhaltung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">2.1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">2.1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item "><a href="../../../leistungsprozesse/finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">2.1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li></ol></li><li class="chapter-item "><a href="../../../03-genossenschaftsprozesse.html"><strong aria-hidden="true">3.</strong> Genossenschaftsprozesse</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../genossenschaftsprozesse/it.html"><strong aria-hidden="true">3.1.</strong> Information und Kommunikation</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../genossenschaftsprozesse/it/informationsmanagement.html"><strong aria-hidden="true">3.1.1.</strong> Informationsmanagement</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../genossenschaftsprozesse/it/informationsmanagement/publikation.html"><strong aria-hidden="true">3.1.1.1.</strong> Publikation</a></li></ol></li><li class="chapter-item "><a href="../../../genossenschaftsprozesse/it/prozessunterstuetzung.html"><strong aria-hidden="true">3.1.2.</strong> Prozessunterstützung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../genossenschaftsprozesse/it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">3.1.2.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li></ol></li></ol></li><li class="chapter-item "><a href="../../../04-weiterentwicklung.html"><strong aria-hidden="true">4.</strong> Weiterentwicklung</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../weiterentwicklung/weitere-schulprozesse.html"><strong aria-hidden="true">4.1.</strong> Weitere Schulprozesse</a></li></ol></li><li class="chapter-item "><div>Beitragende</div></li><li class="chapter-item affix "><a href="../../../98-datenschutz.html">Datenschutz</a></li><li class="chapter-item affix "><a href="../../../99-lizenz.html">Lizenz</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -156,7 +156,7 @@
                     <h1 class="menu-title">Servicenetzwerk Freie Bildung</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -185,20 +185,22 @@
 
                 <div id="content" class="content">
                     <main>
-                        <img class="replacement-image" src="book-assets/titel.png"/>
-<h1 id="handbuch-servicenetzwerk-freie-bildung"><a class="header" href="#handbuch-servicenetzwerk-freie-bildung">Handbuch Servicenetzwerk Freie Bildung</a></h1>
-<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. </p>
-<p><img src="book-assets/gliederung.png" alt="Gliederung der Services" /></p>
-<p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.
-Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wieder ändern.</p>
-<p>Weitere Prozesse sind in Planung.</p>
+                        <h1 id="elternbeitragsverarbeitung"><a class="header" href="#elternbeitragsverarbeitung">Elternbeitragsverarbeitung</a></h1>
+<ul>
+<li><strong><a href="elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html">Stammdaten-Abrechnungs-Management</a></strong></li>
+<li><strong><a href="elternbeitragsverarbeitung/lastschriftenausloesung.html">Lastschriftenauslösung</a></strong></li>
+<li><strong><a href="elternbeitragsverarbeitung/lastschriftverbuchung.html">Lastschriftverbuchung</a></strong></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="01-prozess-schnittstelle.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -208,8 +210,11 @@ Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wie
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="01-prozess-schnittstelle.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../../leistungsprozesse/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -224,13 +229,13 @@ Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wie
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../../elasticlunr.min.js"></script>
+        <script src="../../../mark.min.js"></script>
+        <script src="../../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../../clipboard.min.js"></script>
+        <script src="../../../highlight.js"></script>
+        <script src="../../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
