--- a/weiterentwicklung/weitere-schulprozesse.html
+++ b/weiterentwicklung/weitere-schulprozesse.html
@@ -204,21 +204,13 @@
 <li>Presse</li>
 </ul>
 <h2 id="prozesse"><a class="header" href="#prozesse">Prozesse</a></h2>
-<h3 id="lernbezogene-prozesse"><a class="header" href="#lernbezogene-prozesse">Lernbezogene Prozesse</a></h3>
-<p>... </p>
 <h3 id="organisatorische-prozesse"><a class="header" href="#organisatorische-prozesse">Organisatorische Prozesse</a></h3>
 <h4 id="finanzverwaltung"><a class="header" href="#finanzverwaltung">Finanzverwaltung</a></h4>
-<ol>
-<li>
-<p>Kreditorenbuchhaltung</p>
-</li>
-<li>
-<p>Debitorenbuchhaltung</p>
-</li>
-<li>
-<p>Lohnbuchhaltung</p>
-</li>
-</ol>
+<ul>
+<li>Kreditorenbuchhaltung</li>
+<li>Debitorenbuchhaltung</li>
+<li>Lohnbuchhaltung</li>
+</ul>
 <h3 id="an--und-abwesenheit"><a class="header" href="#an--und-abwesenheit">An- und Abwesenheit</a></h3>
 <ul>
 <li>Zeiterfassung für Lernbegleitende</li>
