--- a/print.html
+++ b/print.html
@@ -188,7 +188,8 @@
                     <main>
                         <img class="replacement-image" src="book-assets/titel.png"/>
 <h1 id="handbuch-servicenetzwerk-freie-bildung"><a class="header" href="#handbuch-servicenetzwerk-freie-bildung">Handbuch Servicenetzwerk Freie Bildung</a></h1>
-<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. </p>
+<p>Das Servicenetzwerk Freie Bildung konzipiert ein Genossenschaftsmodell, in dem freie Schulen genossenschaftlich die Verbesserung ihrer administrativen Abläfe organisieren. Das Konzept ist aufgrund der CC BY-SA 4.0 Lizenz offen verfügbar.</p>
+<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor.</p>
 <p><img src="book-assets/gliederung.png" alt="Gliederung der Services" /></p>
 <p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.
 Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wieder ändern.</p>
@@ -575,21 +576,13 @@ Das ist ein Text nach dem Diagramm.
 <li>Presse</li>
 </ul>
 <h2 id="prozesse"><a class="header" href="#prozesse">Prozesse</a></h2>
-<h3 id="lernbezogene-prozesse"><a class="header" href="#lernbezogene-prozesse">Lernbezogene Prozesse</a></h3>
-<p>... </p>
 <h3 id="organisatorische-prozesse"><a class="header" href="#organisatorische-prozesse">Organisatorische Prozesse</a></h3>
 <h4 id="finanzverwaltung-1"><a class="header" href="#finanzverwaltung-1">Finanzverwaltung</a></h4>
-<ol>
-<li>
-<p>Kreditorenbuchhaltung</p>
-</li>
-<li>
-<p>Debitorenbuchhaltung</p>
-</li>
-<li>
-<p>Lohnbuchhaltung</p>
-</li>
-</ol>
+<ul>
+<li>Kreditorenbuchhaltung</li>
+<li>Debitorenbuchhaltung</li>
+<li>Lohnbuchhaltung</li>
+</ul>
 <h3 id="an--und-abwesenheit"><a class="header" href="#an--und-abwesenheit">An- und Abwesenheit</a></h3>
 <ul>
 <li>Zeiterfassung für Lernbegleitende</li>
