deploy: FreieBildung/Organisationsentwicklung@e9e3094b3b379a909021ea59512d3bace77d6c1e

--- a/genossenschaftsprozesse/it/informationsmanagement/publikation.html
+++ b/genossenschaftsprozesse/it/informationsmanagement/publikation.html
@@ -10,7 +10,7 @@
         <script src="https://unpkg.com/bpmn-js@16.0.0/dist/bpmn-navigated-viewer.development.js"></script>
         <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
 
-        <meta name="description" content="">
+        <meta name="description" content="Handbuch">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -188,12 +188,10 @@
                         <h1 id="publikation"><a class="header" href="#publikation">Publikation</a></h1>
 <h2 id="ausgabeziel"><a class="header" href="#ausgabeziel">Ausgabeziel</a></h2>
 <h3 id="website"><a class="header" href="#website">Website</a></h3>
-<p>Das Handbuch zur Organisationsentwicklung wird weitgehend automatisch publiziert. Dazu dient die versionierte Ablage aller Inhalte im github Projekt-Repository. Zum Schreiben und schnellen Testen kann die Erzeugung auch lokal auf dem PC durchgeführt werden.</p>
+<p>Die Website wird durch das Tool <a href="https://rust-lang.github.io/mdBook/index.html">mdbook</a> erstellt. Dadurch wird es möglich, das Handbuch zur Organisationsentwicklung wird weitgehend automatisch zu publizieren. Dazu dient die versionierte Ablage aller Inhalte im github Projekt-Repository. Zum Schreiben und schnellen Testen kann die Erzeugung auch lokal auf dem PC durchgeführt werden.</p>
 <h3 id="pdf"><a class="header" href="#pdf">PDF</a></h3>
 <p>Die Erzeugung von PDFs ist möglich, allerdings momentan noch eingeschränkt.</p>
 <ul>
-<li>Keine Titelseite</li>
-<li>Keine Prozessdiagramme (ein Workaround findet sich auf der Seite zur Eingliederungshilfe)</li>
 <li>Nicht automatisierbar, das Modul führt zu Fehlern im automatischen Deployment.</li>
 </ul>
 <h2 id="prozessbeteiligte"><a class="header" href="#prozessbeteiligte">Prozessbeteiligte</a></h2>
