--- a/leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html
+++ b/leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html
@@ -10,7 +10,7 @@
         <script src="https://unpkg.com/bpmn-js@16.0.0/dist/bpmn-navigated-viewer.development.js"></script>
         <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
 
-        <meta name="description" content="">
+        <meta name="description" content="Handbuch">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
