deploy: FreieBildung/Organisationsentwicklung@475bb183eb52ffc085fb71e385d7677a19ccc8b9

--- a/04-weiterentwicklung.html
+++ b/04-weiterentwicklung.html
@@ -194,9 +194,11 @@
 <li>Einführung neuer Leistungsangebote</li>
 <li>Training</li>
 <li>Informationskonzept</li>
+<li>Verrechnungsprozesse</li>
 </ul>
 <h3 id="it"><a class="header" href="#it">IT</a></h3>
 <ul>
+<li>Bereitstellung von vorkonfigurierten Diensten, z.B. Website</li>
 <li>Automatisierung von Abläufen</li>
 <li>Sicherheitsprozesse</li>
 </ul>
@@ -205,6 +207,10 @@
 <li><strong><a href="weiterentwicklung/weitere-schulprozesse.html">Grundsätzlich alle geregelten verwaltenden Abläufe der Schule</a></strong></li>
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
+</ul>
+<h3 id="partner"><a class="header" href="#partner">Partner</a></h3>
+<ul>
+<li>Aufnahme von Partnerangeboten in die Service-Leistungen</li>
 </ul>
 
                     </main>
