--- a/print.html
+++ b/print.html
@@ -543,9 +543,11 @@ Das ist ein Text nach dem Diagramm.
 <li>Einführung neuer Leistungsangebote</li>
 <li>Training</li>
 <li>Informationskonzept</li>
+<li>Verrechnungsprozesse</li>
 </ul>
 <h3 id="it"><a class="header" href="#it">IT</a></h3>
 <ul>
+<li>Bereitstellung von vorkonfigurierten Diensten, z.B. Website</li>
 <li>Automatisierung von Abläufen</li>
 <li>Sicherheitsprozesse</li>
 </ul>
@@ -554,6 +556,10 @@ Das ist ein Text nach dem Diagramm.
 <li><strong><a href="weiterentwicklung/weitere-schulprozesse.html">Grundsätzlich alle geregelten verwaltenden Abläufe der Schule</a></strong></li>
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
+</ul>
+<h3 id="partner"><a class="header" href="#partner">Partner</a></h3>
+<ul>
+<li>Aufnahme von Partnerangeboten in die Service-Leistungen</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="weitere-schulprozesse"><a class="header" href="#weitere-schulprozesse">Weitere Schulprozesse</a></h1>
 <h2 id="beteiligte-1"><a class="header" href="#beteiligte-1">Beteiligte</a></h2>
