--- a/print.html
+++ b/print.html
@@ -191,9 +191,9 @@
 <p>Das Servicenetzwerk Freie Bildung konzipiert ein Genossenschaftsmodell, in dem freie Schulen genossenschaftlich die Verbesserung ihrer administrativen Abläfe organisieren. Das Konzept ist aufgrund der CC BY-SA 4.0 Lizenz offen verfügbar.</p>
 <p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor.</p>
 <p><img src="book-assets/gliederung.png" alt="Gliederung der Services" /></p>
-<p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.
-Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wieder ändern.</p>
-<p>Weitere Prozesse sind in Planung.</p>
+<p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.</p>
+<p>Weitere Leistungsprozesse sind in Planung.</p>
+<p>Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wieder ändern.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="prozess-schnittstelle"><a class="header" href="#prozess-schnittstelle">Prozess-Schnittstelle</a></h1>
 <p>Die Prozess-Schnittstelle beschreibt, wie Leistungsnehmer des Servicenetzwerks die Leistungen in Anspruch nehmen. Sie sind als Service Level Agreements gestaltet und im Idealfall später automatisiert. Sie verbirgt die konkrete Ausgestaltung der <a href="02-leistungsprozesse.html">Leistungsprozesse</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="leistungsprozesse"><a class="header" href="#leistungsprozesse">Leistungsprozesse</a></h1>
