deploy: FreieBildung/Organisationsentwicklung@88e6963c2bd26fc0ec4816bbe199057f22a25b3f

--- a/99-lizenz.html
+++ b/99-lizenz.html
@@ -185,7 +185,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="lizenz"><a class="header" href="#lizenz">Lizenz</a></h1>
+                        <h1 id="lizenzübersicht"><a class="header" href="#lizenzübersicht">Lizenzübersicht</a></h1>
 <p><strong><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.de">CC BY-SA 4.0</a></strong> Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International </p>
 <p>Quelle der Übersicht: <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.de">creativecommons.org</a></p>
 <h2 id="sie-dürfen"><a class="header" href="#sie-dürfen">Sie dürfen</a></h2>
