--- a/00-einleitung.html
+++ b/00-einleitung.html
@@ -187,7 +187,7 @@
                     <main>
                         <img class="replacement-image" src="book-assets/titel.png"/>
 <h1 id="handbuch-servicenetzwerk-freie-bildung"><a class="header" href="#handbuch-servicenetzwerk-freie-bildung">Handbuch Servicenetzwerk Freie Bildung</a></h1>
-<p>Das Servicenetzwerk Freie Bildung konzipiert ein Genossenschaftsmodell, in dem freie Schulen genossenschaftlich die Verbesserung ihrer administrativen Abläfe organisieren. Das Konzept ist aufgrund der CC BY-SA 4.0 Lizenz offen verfügbar.</p>
+<p>Das Servicenetzwerk Freie Bildung konzipiert ein Genossenschaftsmodell, in dem freie Schulen genossenschaftlich die Verbesserung ihrer administrativen Abläufe organisieren. Das Konzept ist aufgrund der CC BY-SA 4.0 Lizenz offen verfügbar.</p>
 <p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor.</p>
 <p><img src="book-assets/gliederung.png" alt="Gliederung der Services" /></p>
 <p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.</p>
