deploy: FreieBildung/Organisationsentwicklung@b549883c8157eafde670f88cba98cf60f78d6245

--- a/leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegeingang.html
+++ b/leistungsprozesse/finanzverwaltung/kreditorenbuchhaltung/belegeingang.html
@@ -186,7 +186,50 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="belegeingang"><a class="header" href="#belegeingang">Belegeingang</a></h1>
-<h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
+<h2 id="beteiligte"><a class="header" href="#beteiligte">Beteiligte</a></h2>
+<ul>
+<li>Lieferant</li>
+<li>Verwaltung</li>
+<li>Besteller - zuständige Abteilung</li>
+<li>Buchhaltung</li>
+</ul>
+<h2 id="der-ideale-prozess"><a class="header" href="#der-ideale-prozess">Der ideale Prozess</a></h2>
+<h3 id="ablauf"><a class="header" href="#ablauf">Ablauf</a></h3>
+<ul>
+<li>Die Verwaltung Schule erhält eine Rechnung.</li>
+<li>Die Verwaltung digitalisiert die Rechnung, wenn sie als Papier ankommt.</li>
+<li>Die Verwaltung lädt den digitalen Beleg ins Dokumentenmanagement der Buchhaltung.</li>
+<li>Die Verwaltung dokumentiert den Verwendungszweck des Belegs im Dokumentenmanagement.</li>
+<li>Die Verwaltung prüft den Beleg nach UStG §14 (z.B. Adressat, Datum, Umsatzsteuer etc.).
+<ul>
+<li>Sofern die Rechnung fehlerhaft ist, fordert die Verwaltung eine Rechnungskorrektur an.</li>
+</ul>
+</li>
+<li>Der Besteller prüft die Rechnung auf sachliche und rechnerische Richtigkeit.
+<ul>
+<li>Sofern die Rechnung fehlerhaft ist, übergibt der Besteller sie mit Gründen zurück an die Verwaltung. Die Verwaltung fordert eine Korrektur an.</li>
+</ul>
+</li>
+<li>Die Besteller gibt die Rechnung frei.
+<ul>
+<li>Bei Überschreitung eines Freigabebetrages prüft ein Vorgesetzter die Rechnung ebenfalls.</li>
+</ul>
+</li>
+<li>Die Buchhaltung bucht den Beleg kreditorisch.</li>
+</ul>
+<h3 id="schnittstellen"><a class="header" href="#schnittstellen">Schnittstellen</a></h3>
+<h3 id="regelungen"><a class="header" href="#regelungen">Regelungen</a></h3>
+<h3 id="voraussetzungen"><a class="header" href="#voraussetzungen">Voraussetzungen</a></h3>
+<h3 id="prozessfehler"><a class="header" href="#prozessfehler">Prozessfehler</a></h3>
+<h3 id="prozesskennzahlen"><a class="header" href="#prozesskennzahlen">Prozesskennzahlen</a></h3>
+<ul>
+<li>Wie viele Rechnungen werden angemahnt?</li>
+<li>Wie viel Skontoverlust wegen verspäteter Zahlung ist entstanden?</li>
+<li>Wie viele Rechnungen müssen storniert werden wegen Fehlbuchungen?</li>
+<li>Wie viele Rechnungen werden insgesamt gebucht?</li>
+<li>Wie lange ist die durchschnittliche Durchlaufzeit pro Rechnung? </li>
+</ul>
+<h2 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h2>
 <style>#js-canvas { background-color: #eeeeee; } </style>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
