--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
 <p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor.</p>
 <p><img src="book-assets/gliederung.png" alt="Gliederung der Services" /></p>
 <p>Momentan liegt der Fokus auf den Leistungsprozessen zur Finanzverwaltung, die für die teilnehmenden Schulen essenziell sind.</p>
+<p>Die Prozessversorgung wird durch Standardsysteme digital sichergestellt und durch die Mitarbeiterinnen der Genossenschaft betreut. Die Schulen können sich somit auf ihre pädagogische Arbeit konzentrieren. Die folgende Abbildung zeigt die Prozessversorgung durch das Servicenetzwerk.</p>
+<p><img src="book-assets/bigpicture.png" alt="Aufbau der Prozessversorgung mit Systemen" /></p>
 <p>Weitere Leistungsprozesse sind in Planung.</p>
 <p>Das Handbuch ist noch im Aufbau und wird sich in der Weiterentwicklung immer wieder ändern.</p>
 
